Overflow correction

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,6 +23,7 @@ html, body {
 	
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 	
 }
 
@@ -73,8 +74,6 @@ body {
 	position: absolute;
 	width: 750px;
 	height: 750px;
-	
-	overflow: show;
 	
 }
 
